[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/scripts/FinishScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/images/misc/newspaper-template-clipart-clipartxtras-regarding-blank-newspaper-template-png.jpg" type="Texture" id=2]

[sub_resource type="DynamicFontData" id=1]

hinting = 2
font_path = "res://assets/fonts/Cinzel-Black.ttf"

[sub_resource type="DynamicFont" id=2]

size = 28
use_mipmaps = true
use_filter = false
font_data = SubResource( 1 )
_sections_unfolded = [ "Font", "Font/fallback", "Settings" ]

[sub_resource type="DynamicFontData" id=3]

hinting = 2
font_path = "res://assets/fonts/Cinzel-Bold.ttf"

[sub_resource type="DynamicFont" id=4]

size = 20
use_mipmaps = false
use_filter = false
font_data = SubResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=5]

resource_name = "FinishNewspaper"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ContentLabel:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NewsPaper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2.07036, 2.03964 ), Vector2( 2.07036, 2.03964 ) ]
}

[sub_resource type="Animation" id=6]

length = 10.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("NewsPaper:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 2.07036, 2.03964 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ContentLabel:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 9.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NewsPaper:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -21.9, -191.14, -308.859, -451.359, -583.947, -697.369, -801.502, -891.109, -1023.18, -1077.95, -1101.9 ]
}

[node name="FinishScreen" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 763.0
margin_bottom = 1330.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.996094, 0.992142, 0.988312, 1 )
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="NewsPaper" type="Sprite" parent="." index="1"]

position = Vector2( 380.535, 509.152 )
rotation = -19.2318
scale = Vector2( 2.07036, 2.03964 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="HeaderLabel" type="Label" parent="NewsPaper" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -136.0
margin_top = -52.0
margin_right = 137.0
margin_bottom = -10.0
rect_rotation = 0.381442
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0195313, 0.0189209, 0.0189209, 1 )
text = "DENEME HEADER"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="NextButton" type="TouchScreenButton" parent="." index="2"]

position = Vector2( 442.981, 1126.34 )
scale = Vector2( 1.04729, 1.04729 )
normal = null
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="SkipButton" type="TouchScreenButton" parent="." index="3"]

position = Vector2( 433.014, 1125.33 )
scale = Vector2( 1.08716, 1.08716 )
normal = null
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="ContentLabel" type="RichTextLabel" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 153.0
margin_top = 671.0
margin_right = 704.0
margin_bottom = 912.0
rect_rotation = -21.6902
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.0313726, 0.027451, 0.027451, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = 0
percent_visible = 0.168539
meta_underlined = true
tab_size = 4
text = "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/FinishNewspaper = SubResource( 5 )
anims/Newspaper = SubResource( 6 )
blend_times = [  ]

[connection signal="pressed" from="SkipButton" to="." method="_on_SkipButton_pressed"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


